CSS: create / update various color variables

--- a/packages/openneuro-app/src/sass/crn_app/_colors.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_colors.scss
@@ -6,6 +6,7 @@
 
 $white: #fff;
 $black: #000;
+$mine-shaft: #222;
 $stanford-red: #8c1515;
 $coral: #eb472c;
 $salmon: #ec7764;
@@ -21,7 +22,10 @@ $ocean: #00505c;
 $algae: #175e54;
 $sky: #007c92;
 $turquoise: #009b76;
+$persian-green: #00b489; 
 $night: #012a30;
+$jungle-mist: #b5cbd3;
+$dodger-blue: #5890ff;
 
 $yellow: #ffd820;
 $honey: #fffcee;
@@ -40,11 +44,14 @@ $warning-orange: #df7600;
 
 $c-9e: #9e9e9e;
 $c-90: #909090;
+$c-99: #999;
 $c-77: #777;
 $c-66: #666;
 $c-56: #565656;
 $c-42: #424242;
+$c-4b: #4b4b4b;
 $c-33: #333;
+$c-44: #444;
 $c-21: #212121;
 
 $aaa: #aaa;
