--- a/packages/openneuro-app/src/sass/crn_app/_api.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_api.scss
@@ -19,8 +19,8 @@
             text-align: center;
             color: $primary;
             font-size: 20px;
-            border-bottom: 1px solid #ddd;
-            border-top: 1px solid #ddd;
+            border-bottom: 1px solid $ddd;
+            border-top: 1px solid $ddd;
             border-radius: 0;
         }
 
