--- a/packages/openneuro-app/src/sass/crn_app/_dataset.jobs.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.jobs.scss
@@ -49,10 +49,10 @@
 
             .app-descriptions {
                 font-size: 12px;
-                color: #666;
+                color: $c-66;
 
                 label{
-                    color: #9e9e9e;
+                    color: $c-9e;
                 }
                 span {
                     margin-left: 1px;
