--- a/packages/openneuro-app/src/sass/draft/rich-editor.scss
+++ b/packages/openneuro-app/src/sass/draft/rich-editor.scss
@@ -1,12 +1,12 @@
 .RichEditor-root {
-    background: $white
+    background: $white;
     font-family: 'Georgia', serif;
     font-size: 14px;
     padding-bottom:10px;
   }
   
   .RichEditor-editor {
-    // border-top: 1px solid #ddd;
+    // border-top: 1px solid $ddd;
     cursor: text;
     font-size: 16px;
     margin-top: 10px;
@@ -23,8 +23,8 @@
   }
   
   .RichEditor-editor .RichEditor-blockquote {
-    border-left: 5px solid #eee;
-    color: #666;
+    border-left: 5px solid $eee;
+    color: $c-66;
     font-family: 'Hoefler Text', 'Georgia', serif;
     font-style: italic;
     margin: 16px 0;
@@ -51,7 +51,7 @@
   }
   
   .RichEditor-styleButton {
-    color: #999;
+    color: $c-99;
     cursor: pointer;
     margin-right: 16px;
     padding: 2px 0;
@@ -59,7 +59,7 @@
   }
   
   .RichEditor-activeButton {
-    color: #5890ff;
+    color: $dodger-blue;
   }
 
   .public-DraftStyleDefault-pre {
