--- a/packages/openneuro-app/src/sass/crn_app/_common.progress-bar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.progress-bar.scss
@@ -12,7 +12,7 @@
 
 .progress-bar {
     max-width: 100%;
-    background: $tertiary;
+    background: --tertiary;
 
     span span {
         font-size: 10px;
