--- a/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_nav.navbar.scss
@@ -11,7 +11,7 @@
         top: 0;
         left: 0;
         z-index: 1300;
-        border-top: 10px solid $navbar-top-border-color;
+        border-top: 10px solid --navbar-top-border-color;
     }
 }
 
@@ -32,8 +32,8 @@
 
 
 .navbar-default {
-    background: $navbar-background-color;
-    color: $navbar-btn-text-color;
+    background: --navbar-background-color;
+    color: --navbar-btn-text-color;
     margin: 0;
     padding: 0;
     border-radius: 0;
@@ -54,7 +54,7 @@
             > .link {
                 border: 1px solid transparent;
                 padding: 10px;
-                color: $navbar-btn-text-color;
+                color: --navbar-btn-text-color;
                 margin: 17px 0;
                 border-radius: 2px;
                 transition: border .5s ease;
@@ -66,8 +66,8 @@
                 }
 
                 &.active {
-                    color: $navbar-btn-text-color;
-                    border-color: $navbar-btn-text-color;
+                    color: --navbar-btn-text-color;
+                    border-color: --navbar-btn-text-color;
                 }
             }
         }
@@ -82,7 +82,7 @@
                 text-align: center;
                 display: block;
                 padding: 0 10px;
-                color: $navbar-btn-text-color;
+                color: --navbar-btn-text-color;
                 background: $transparent;
                 -webkit-transition: all .5s;
                 transition: all .5s;
@@ -100,14 +100,14 @@
                 &:focus,
                 &:active,
                 &.active {
-                    color: $navbar-btn-active-text-color;
-                    background: $navbar-btn-active-background-color;
+                    color: --navbar-btn-active-text-color;
+                    background: --navbar-btn-active-background-color;
                 }
 
                 &:hover {
 
                     .link-name {
-                        border-color: $navbar-btn-text-underline-color;
+                        border-color: --navbar-btn-text-underline-color;
                     }
                  }
             }
@@ -142,8 +142,8 @@
                 .nav-link.nl-upload {
                     width: 180px;
                     padding: 0 15px;
-                    background: $navbar-upload-btn-background-color;
-                    color: lighten($secondary, 10%);
+                    background: --navbar-upload-btn-background-color;
+                    color: lighten(--secondary, 10%);
 
                     .link-name {
                         border-color: $transparent;
@@ -170,7 +170,7 @@
                     &:active,
                     &.active {
                         color: $white;
-                        background: $navbar-upload-btn-active-background-color;
+                        background: --navbar-upload-btn-active-background-color;
 
                     }
                 }
@@ -290,13 +290,13 @@
 
                     .btn-submit-other {
                         margin-bottom: 15px;
-                        color: $secondary;
+                        color: --secondary;
                         border-color: $transparent;
 
                         &:hover,
                         &.active {
                             border-color: $transparent;
-                            color: darken($secondary, 10%);
+                            color: darken(--secondary, 10%);
                             background: $eee;
                         }
                     }
@@ -308,7 +308,7 @@
                     //     font-size: 12px;
                     //     border: 0;
                     //     padding: 0;
-                    //     color: $primary;
+                    //     color: --primary;
                     // }
 
                     // .um-icon {
@@ -325,7 +325,7 @@
                     //         background-color: $transparent;
                     //         color: $c-77;
 
-                    //         &:hover {color: $primary;}
+                    //         &:hover {color: --primary;}
 
                     //         &.active {color: darken($c-77, 5%);}
                     //     }
@@ -441,7 +441,7 @@
 
         .logo-end{
             transition: color 0.3s;
-            color: lighten($primary, 12%);
+            color: lighten(--primary, 12%);
         }
         &:hover{
             .logo-end{
