--- a/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_dataset.dataset.scss
@@ -10,7 +10,7 @@
                 padding: 0;
                 text-transform: none;
                 font-weight: 300;
-                font-family: $font-family-open;
+                font-family: --font-family-open;
                 font-size: 40px;
                 color: $c-33;
             }
@@ -26,7 +26,7 @@
 
                 .cte-save-btn {
                     font-size: 16px;
-                    font-family: $font-family-cabin;
+                    font-family: --font-family-cabin;
                 }
             }
         }
