--- a/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_frontPage.scss
@@ -69,7 +69,7 @@
     p {
         font-size: 22px;
         font-weight: 100;
-        font-family: $font-family-open;
+        font-family: --font-family-open;
     }
 }
 
@@ -157,7 +157,7 @@
                     margin: 0 auto;
                     height: 180px;
                     h3{
-                        font-family: $font-family-open;
+                        font-family: --font-family-open;
                         font-weight: 200;
                         font-size: 40px;
                     }
@@ -170,7 +170,7 @@
                 .more{
                     border-bottom: 5px solid transparent;
                     font-size: 22px;
-                    color: $secondary;
+                    color: --secondary;
                     text-transform: uppercase;
                     text-align: center;
                     padding: 20px;
@@ -183,27 +183,27 @@
                     &:before{
                         content: '+';
                         font-size: 25px;
-                        border: 1px solid $secondary;
+                        border: 1px solid --secondary;
                         border-radius: 100%;
                         height: 38px;
                         width: 38px;
                         display: inline-block;
                         line-height: 34px;
                         text-align: center;
-                        font-family: $font-family-open;
+                        font-family: --font-family-open;
                         font-weight: 200;
                         margin-right: 7px;
                         transition: transform .3s;
                     }
                     &:hover{
                         border-color: $eee;
-                        color: $primary;
+                        color: --primary;
                     }
                 }
 
                 &.active{
                     .more{
-                        border-color: $secondary;
+                        border-color: --secondary;
                         &:before{
                             -ms-transform: rotate(135deg);
                             -webkit-transform: rotate(135deg);
@@ -259,7 +259,7 @@
             }
         }
         .caption {
-            font-family: $font-family-open;
+            font-family: --font-family-open;
             font-size: 18px;
             padding: 10px;
             color: $c-66;
@@ -284,12 +284,12 @@
         .bids-more,
         .openneuro-more{
             text-align: left;
-            font-family: $font-family-open;
+            font-family: --font-family-open;
             margin: 0;
             font-weight: 200;
             .logo-text{
                  font-size: 50px;
-                font-family: $font-family-cabin;
+                font-family: --font-family-cabin;
             }
             .col-sm-6{
                 padding: 10px 30px 30px;
@@ -299,10 +299,10 @@
                     max-width: 450px;
                 }
                 a{
-                    color: $secondary;
+                    color: --secondary;
                     font-weight: 400;
                     &:hover{
-                        color: $primary;
+                        color: --primary;
                     }
                 }
             }
@@ -384,7 +384,7 @@
                     font-size: 20px;
                     color: $white;
                     font-weight: 300;
-                    font-family: $font-family-open;
+                    font-family: --font-family-open;
                 }
 
                 select{
@@ -487,9 +487,9 @@
 }
 
 footer {
-    background: $footer-background-color;
+    background: --footer-background-color;
     padding: 10px 20px;
-    color: $footer-text-color;
+    color: --footer-text-color;
     display: block;
     .version{
 
@@ -507,10 +507,10 @@ footer {
                 text-align: center;
                 list-style: none;
                 a{
-                    color: $footer-text-color;
+                    color: --footer-text-color;
                     &:hover{
                         text-decoration: underline;
-                        color: lighten($secondary, 15%);
+                        color: lighten(--secondary, 15%);
                     }
                 }
             }
