Fix scss function / css var conflicts.

--- a/packages/openneuro-app/src/sass/crn_app/_colors.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_colors.scss
@@ -20,7 +20,7 @@ $fuchsia: #9169a7;
 
 $ocean: #00505c;
 $algae: #175e54;
-$sky: #007c92;
+$sky: rgb(0, 124, 146);
 $turquoise: #009b76;
 $persian-green: #00b489; 
 $night: #012a30;
