--- a/packages/openneuro-app/src/sass/crn_app/_common.click-to-edit.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_common.click-to-edit.scss
@@ -29,7 +29,7 @@
     }
     &:hover {
         background: none;
-        color: lighten(--primary, 10%);
+        color: --primary-hover;
     }
 }
 
