--- a/packages/openneuro-app/src/sass/crn_app/_theme.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_theme.scss
@@ -10,6 +10,8 @@
   --primary-hover: lighten($ocean, 15%);
 
   --secondary: $sky;
+  --secondary-hover: lighten($sky, 50%);
+  --secondary-darken: darken($sky, 10%);
 
   --tertiary: $turquoise;
 
