--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -234,7 +234,7 @@ $bootstrap-sass-asset-helper: true;
         padding: 5px 2px;
         height: auto;
         &:hover{
-            background:transparentize(--secondary, .5);
+            background: --secondary-hover;
             color:$white;
         }
     }
