--- a/packages/openneuro-app/src/sass/crn_app/_theme.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_theme.scss
@@ -6,44 +6,44 @@
 :root {
 
   // Colors
-  --primary: $ocean;
-  --primary-hover: lighten($ocean, 15%);
+  --primary: #{$ocean};
+  --primary-hover: #{lighten($ocean, 15%)};
 
-  --secondary: $sky;
-  --secondary-hover: lighten($sky, 50%);
-  --secondary-darken: darken($sky, 10%);
+  --secondary: #{$sky};
+  --secondary-hover: #{lighten($sky, 50%)};
+  --secondary-darken: #{darken($sky, 10%)};
 
-  --tertiary: $turquoise;
+  --tertiary: #{$turquoise};
 
   // Fonts
   --font-family-open: 'Open Sans', sans-serif;
   --font-family-cabin: 'Cabin', sans-serif;
 
   // Shadows
-  --btn-shadow: 1px 1px 3px -1px $transparent7;
+  --btn-shadow: 1px 1px 3px -1px #{$transparent7};
 
   // Navbar
-  --navbar-top-border-color: $stanford-red;
-  --navbar-background-color: $c-33;
-  --navbar-btn-text-color: $misty;
-  --navbar-btn-text-underline-color: $transparent1-w;
-  --navbar-btn-active-background-color: $transparent05-w;
-  --navbar-btn-active-text-color: $white; 
-  --navbar-upload-btn-background-color: $transparent3;
-  --navbar-upload-btn-active-background-color: --secondary;
+  --navbar-top-border-color: #{$stanford-red};
+  --navbar-background-color: #{$c-33};
+  --navbar-btn-text-color: #{$misty};
+  --navbar-btn-text-underline-color: #{$transparent1-w};
+  --navbar-btn-active-background-color: #{$transparent05-w};
+  --navbar-btn-active-text-color: #{$white}; 
+  --navbar-upload-btn-background-color: #{$transparent3};
+  --navbar-upload-btn-active-background-color: var(--secondary);
 
   // Footer
-  --footer-background-color: $c-33;
-  --footer-text-color: $white;
+  --footer-background-color: #{$c-33};
+  --footer-text-color: #{$white};
 
   // Dashboard
-  --dashboard-tab-text-color: --primary;
+  --dashboard-tab-text-color: var(--primary);
 
   // Charts
-  --chart-success-color: $turquoise;
-  --chart-failed-color: $coral;
+  --chart-success-color: #{$turquoise};
+  --chart-failed-color: #{$coral};
 
   // Misc
-  --spinner-color: $turquoise; // color of the loading spinner
+  --spinner-color: #{$turquoise}; // color of the loading spinner
 
 }
