--- a/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
+++ b/packages/openneuro-app/src/sass/crn_app/_upload.upload.scss
@@ -33,11 +33,11 @@
 
     .upload-reset-link,
     .rename-tab-link {
-      color: --primary;
+      color: var(--primary);
       cursor: pointer;
 
       &:hover {
-        color: --primary-hover;
+        color: var(--primary-hover);
       }
     }
   }
@@ -99,13 +99,13 @@
         font-size: 12px;
         background-color: $transparent;
         border: 0;
-        color: --primary;
+        color: var(--primary);
         margin: 0 0 0 20px;
         vertical-align: middle;
         height: 30px;
 
         &:hover {
-          color: --primary-hover;
+          color: var(--primary-hover);
         }
       }
     }
@@ -158,8 +158,8 @@
           display: block;
           padding: 18px;
           background-color: $f4;
-          color: --primary;
-          font-family: --font-family-open;
+          color: var(--primary);
+          font-family: var(--font-family-open);
           font-weight: 400;
           text-decoration: none;
         }
@@ -208,7 +208,7 @@
   background: $bbb;
   transition: margin-left 0.3s ease;
   margin-top: -40px;
-  border-bottom: 5px solid --secondary;
+  border-bottom: 5px solid var(--secondary);
 
   @media (max-width: 1428px) {
     margin-top: -60px;
@@ -246,7 +246,7 @@
       a {
         border-radius: 0;
         background-color: transparent;
-        color: --primary-hover;
+        color: var(--primary-hover);
         font-size: 14px;
         border-right: 1px solid $transparent1;
         letter-spacing: 0;
@@ -254,7 +254,7 @@
 
         &:hover {
           background-color: $transparent;
-          color: --primary;
+          color: var(--primary);
         }
 
         @media (max-width: 1428px) {
@@ -324,10 +324,10 @@
   font-size: 12px;
   text-align: center;
   display: block;
-  color: --primary;
+  color: var(--primary);
   background-color: $transparent;
   &:hover {
-    color: --primary-hover;
+    color: var(--primary-hover);
   }
 }
 
@@ -345,7 +345,7 @@
 .uploading.right-sidebar {
   .message {
     text-align: left;
-    color: --tertiary;
+    color: var(--tertiary);
     text-transform: lowercase;
     font-size: 12px;
     margin: 5px 0;
@@ -367,7 +367,7 @@
 }
 
 .upload-step-active {
-  background-color: --primary;
+  background-color: var(--primary);
   color: $white;
 }
 
