--- a/packages/openneuro-app/src/sass/main.scss
+++ b/packages/openneuro-app/src/sass/main.scss
@@ -76,7 +76,7 @@ $bootstrap-sass-asset-helper: true;
     .logo-end{
         font-size: 75%;
         text-transform: uppercase;
-        color: --primary;
+        color: var(--primary);
         font-weight: 400;
     }
 }
@@ -229,12 +229,12 @@ $bootstrap-sass-asset-helper: true;
     }
     button{
         @extend %btn-admin;
-        border-color: --secondary;
-        color: --secondary;
+        border-color: var(--secondary);
+        color: var(--secondary);
         padding: 5px 2px;
         height: auto;
         &:hover{
-            background: --secondary-hover;
+            background: var(--secondary-hover);
             color:$white;
         }
     }
